paginacao em HistoricoCampeonatoOutrosUsuarios e correcao de bug no cadastro de academico